- Added Malay translations (Mahrazi Mohd Kamal)
- Added reference counting for wxVariant

All (GUI):

- Support for right-to-left text layout (started by Diaa Sami during Google Summer of
  Code, with a lot of help from Tim Kosse and others).
- Added wxAboutBox() function for displaying the standard about dialog
- Added wxID_PAGE_SETUP standard id.
- Added wxSize::IncBy() and DecBy() methods.
- Added file type parameter to wxTextCtrl::LoadFile, wxTextCtrl::SaveFile for
  consistency with wxRichTextCtrl.
- wxRichTextCtrl: fixed range out-by-one bug to be consistent with wxTextCtrl API,
  fixed some attribute bugs and added wxRichTextStyleComboCtrl.

wxMSW:

- Implemented wxComboBox::SetEditable().
- wxSemaphore::Post() returns wxSEMA_OVERFLOW as documented (Christian Walther)
- Fixed a bug whereby static controls didn't use the correct text colour if the
  parent's background colour had been set (most noticeable when switching to a
  high-contrast theme).
- Respect wxBU_EXACTFIT style in wxToggleButton (Alexander Borovsky)

wxMac:

- Add parameter to the --enable-universal_binary configure option for the path
  to the SDK.

wxGTK:

- Automatically use stock items for menu items with standard ids.
- Setting cursor now works for all controls.
- Implemented right-to-left support

wxUniv:

- Added wxTLW::UseNativeDecorations() and UseNativeDecorationsByDefault()


2.7.0
-----

All:

- Added positional parameters support to wxVsnprintf() (Francesco Montorsi).
- wx(F)File, wxTextFile and wxInputStreams recognize Unicode BOM now.
- Many fixes for UTF-16/32 handling in Unicode builds.
- wxLaunchDefaultBrowser() now supports wxBROWSER_NEW_WINDOW flag.
- Added wxStandardPaths::GetResourcesDir() and GetLocalizedResourcesDir()
- Added wxStandardPaths::GetDocumentsDir() (Ken Thomases).
- Added wxStringTokenizer::GetLastDelimiter(); improved documentation.
- Fixed wxTextFile in Unicode build.
- Added possibility to specify dependencies for a wxModule.